feat: 2nd part of 2nd task of 10th an10 homework

--- a/courses/an10/homework/ha08.tex
+++ b/courses/an10/homework/ha08.tex
@@ -129,7 +129,17 @@ Entscheiden Sie, ob die folgenden Teilmengen von $\mathbb{R}^2$ kompakt sind.
   \]
 
   $\Rightarrow$ \underline{$\qty\big{n}_{n \in \mathbb{N}_{> 0}}$ ist eine
-  Cauchy-Folge}
+    Cauchy-Folge}
+
+\item Ist der metrische Raum $\qty\big(X, d)$ vollständig?
+
+  \subparagraph{Lsg.} Die Folge $\qty\big{n}_{n \in \mathbb{N}_{> 0}}$
+  ist eine Cauchy-Folge (siehe (a)).
+  Allerdings ist $\underset{n \to \infty}\lim n = \infty \notin X$.
+
+  $\Rightarrow \qty\big{n}_{n \in \mathbb{N}_{> 0}}$ konvergiert in $X$ nicht.
+
+  $\Rightarrow$ \underline{$\qty\big(X, d)$ ist nicht vollständig}
 \end{enumerate}
 
 \end{document}
