--- a/courses/an10/homework/ha08.tex
+++ b/courses/an10/homework/ha08.tex
@@ -181,7 +181,7 @@ Entscheiden Sie, ob die folgenden Teilmengen von $\mathbb{R}^2$ kompakt sind.
   \subparagraph{Lsg.} Sei $n \in \mathbb{N}$ beliebig.
   Dann ist
   \begin{flalign*}
-    p\qty\big(n, n + 1) &= \abs\big{n - n + 1} +
+    p\qty\big(n, n + 1) &= \abs\big{n - \qty\big(n + 1)} +
       \abs{\frac{1}{n} - \frac{1}{n + 1}} &\\
     &= 1 + \underset{\geq 0}{\underbrace{\abs{\frac{1}{n} - \frac{1}{n + 1}}}}
   \end{flalign*}
