--- a/courses/an10/exercises/ex11.tex
+++ b/courses/an10/exercises/ex11.tex
@@ -83,4 +83,23 @@ oder divergieren.
 \end{enumerate}
 \end{landscape}
 
+\newpage
+\begin{enumerate}[(a)]
+\setcounter{enumi}{1}
+\item $\underset{n = 1}{\overset{\infty}{\sum}} \frac{(-7)^n}{9^n}$
+
+  \subparagraph{Lsg.} Die Folge $\qty\big{s_m}_{m \in \mathbb{N}}$ der
+  Partialsummen ist
+  \begin{flalign*}
+    s_m &\coloneqq \sum_{n = 1}^m \frac{\qty\big(-7)^n}{9^n} & \\
+    &= \sum_{n = 1}^m \qty(\frac{-7}{9})^2
+    && \abs{\frac{-7}{9}} < 1 \Rightarrow \text{ geometrische Reihe} \\
+    &= \frac{1 - \qty(\frac{-7}{9})^{n + 1}}{1 - \frac{-7}{9}} - \qty(\frac{-7}{9})^0 \\
+    &= \frac{1 - \qty(\frac{-7}{9})^{n + 1}}{\frac{16}{9}}  - 1\\
+    &= -\frac{\frac{7}{9} - \qty(\frac{-7}{9})^{n + 1}}{\frac{16}{9}} \\
+    &= - \frac{7 - 9 \cdot \qty(\frac{-7}{9})^{n + 1}}{16}
+  \end{flalign*}
+  $\Rightarrow s_m \overset{m \to \infty}\longrightarrow -\frac{7}{16}$,
+  die Reihe konvergiert.
+\end{enumerate}
 \end{document}
