feat: 2nd part of 2nd task of 11th an10 exercise

--- a/courses/an10/exercises/ex11.tex
+++ b/courses/an10/exercises/ex11.tex
@@ -162,4 +162,9 @@ $\Rightarrow$ \underline{Nach dem Majorantenkriterium divergiert die Reihe}
 $\displaystyle \sum_{n = 0}^{\infty}\sum_{k = 0}^{n}a_ka_{n - k}$
 \underline{ gegen $\infty$.}
 
+Was geht schief?
+Die Reihe $\displaystyle \sum_{n = 0}^{\infty}a_n$ konvergiert nicht absolut.
+Folglich divergieren manche Umordnungen der Reihe (oder konvergieren) gegen
+andere Werte.
+
 \end{document}
