--- a/courses/an10/exercises/ex11.tex
+++ b/courses/an10/exercises/ex11.tex
@@ -92,7 +92,7 @@ oder divergieren.
   Partialsummen ist
   \begin{flalign*}
     s_m &\coloneqq \sum_{n = 1}^m \frac{\qty\big(-7)^n}{9^n} & \\
-    &= \sum_{n = 1}^m \qty(\frac{-7}{9})^2
+    &= \sum_{n = 1}^m \qty(\frac{-7}{9})^n
     && \abs{\frac{-7}{9}} < 1 \Rightarrow \text{ geometrische Reihe} \\
     &= \frac{1 - \qty(\frac{-7}{9})^{n + 1}}{1 - \frac{-7}{9}} - \qty(\frac{-7}{9})^0 \\
     &= \frac{1 - \qty(\frac{-7}{9})^{n + 1}}{\frac{16}{9}}  - 1\\
