feat: Better formatting

--- a/courses/an10/homework/ha09.tex
+++ b/courses/an10/homework/ha09.tex
@@ -56,9 +56,9 @@
 
   \subparagraph{Lsg.} Aus Satz 5.20 (4) der Vorlesung (\emph{``Für alle
     $a, \epsilon \in \mathbb{R}_{> 0}$ existiert ein $n_0 \in \mathbb{N}$, so
-    dass $\abs{\sqrt[n]{a} - 1} < \epsilon$ für alle $n > n_0$.''}) folgt, dass
-  für jedes $q \in \qty\big(0, 1)$ ein $k_0 \in \mathbb{N}$ existiert, so dass
-  für alle $k > k_0$ gilt:
+    dass $\abs\big{\sqrt[n]{a} - 1} < \epsilon$ für alle $n > n_0$.''}) folgt,
+  dass für jedes $q \in \qty\big(0, 1)$ ein $k_0 \in \mathbb{N}$ existiert,
+  so dass für alle $k > k_0$ gilt:
   \begin{flalign*}
     \sqrt[k]{\norm{\qty\big(\sqrt[k]{k} - 1)^k}} &=
     \sqrt[k]{\abs{\qty\big(\sqrt[k]{k} - 1)^k}} &\\
