--- a/courses/an10/homework/ha09.tex
+++ b/courses/an10/homework/ha09.tex
@@ -67,7 +67,7 @@
     &\leq \abs{\sqrt[k]{k} - 1} < q
   \end{flalign*}
 
-  $\Rightarrow$ \underline{Nach dem Quotientenkriterium konvergiert die Reihe }
+  $\Rightarrow$ \underline{Nach dem Wurzelkriterium konvergiert die Reihe }
   $\displaystyle \sum_{n = 1}^{\infty} \qty\Big(\sqrt[n]{n} - 1)^n$
   \underline{ absolut.}
 
